--- a/Components/Pages/ColletedTimeSeriesGraph.razor
+++ b/Components/Pages/ColletedTimeSeriesGraph.razor
@@ -1,5 +1,4 @@
 ﻿@page "/ColletedTimeSeriesGraph"
-<h3>ColletedTimeSeriesGraph</h3>
 @using _4LL_Monitoring.Services
 @using MudBlazor.Components.Chart.Models
 @inject TycherosMonitoringService Service
@@ -46,26 +45,18 @@
     </MudGrid>
 </MudPaper>
 
-<div>
-    <MudTimeSeriesChart ChartSeries="@_series" @bind-SelectedIndex="Index" Width="100%" Height="750px" ChartOptions="@_options" CanHideSeries TimeLabelSpacing="TimeSpan.FromMinutes(5)"/>
-    <MudGrid>
-        <MudItem xs="6">
-            <MudText Typo="Typo.body1" Class="py-3">Selected: @(Index < 0 ? "None" : _series[Index].Name)</MudText>
-        </MudItem>
-    </MudGrid>
-</div>
+<MudTimeSeriesChart XAxisTitle="24 Hours" ChartSeries="@_series" @bind-SelectedIndex="Index" Width="100%" Height="750px" ChartOptions="@_options" CanHideSeries TimeLabelSpacing="TimeSpan.FromHours(24)" TimeLabelFormat="HH"/>
+
 
 @code
-
-
-
 {
     private int                                                    _selectedApiIdx = 1;
     private List<string>                                           ApiList         = new() {"CheckOrders", "CheckLogins", "CheckRegistrations"};
     private string                                                 selectedAPI     = "CheckOrders";
     private List<TycherosMonitoringService.AverageHourlyApiResult> _averages       = new();
-    private DateTime?                                              _startDate      = DateTime.UtcNow;
-    private DateTime?                                              _endDate        = DateTime.UtcNow;
+    private DateTime?                                              _startDate      = DateTime.UtcNow.Date;
+    private DateTime?                                              _endDate        = DateTime.UtcNow.Date;
+    private List<DateOnly>                                         _days           = new();
 
     private async Task Refresh()
     {
@@ -73,64 +64,39 @@
         await OnInitializedAsync();
     }
 
-    private int Index = -1; //default value cannot be 0 -> first selectedindex is 0.
+    private int                         Index   = -1; //default value cannot be 0 -> first selectedindex is 0.
+    private List<TimeSeriesChartSeries> _series = new();
     private ChartOptions _options = new()
     {
         YAxisLines            = true,
-        YAxisTicks            = 100,
+        YAxisTicks            = 25,
         MaxNumYAxisTicks      = 25,
         YAxisRequireZeroPoint = false,
-        XAxisLines            = false,
+        XAxisLines            = true,
         LineStrokeWidth       = 1,
     };
-    private                  TimeSeriesChartSeries       _chart1 = new();
-    private                  TimeSeriesChartSeries       _chart2 = new();
-    private                  TimeSeriesChartSeries       _chart3 = new();
-    private                  List<TimeSeriesChartSeries> _series = new();
-    protected override async Task                        OnInitializedAsync() { await OnSelectionChanged(); }
+    protected override async Task OnInitializedAsync() { await OnSelectionChanged(); }
 
     private async Task OnSelectionChanged()
     {
         _averages = await Service.GetAverageHourlyApiResultAsync(_startDate, _endDate);
-        //var dateAvg  = _averages.Where(x => x.Date == DateTime.UtcNow.Date);
+        _days     = _averages.Select(dt => DateOnly.FromDateTime(dt.Date)).Distinct().ToList();
         var baseDate = _startDate ?? DateTime.UtcNow;
         _series = new List<TimeSeriesChartSeries>();
-        var tmp = _averages.Where(x => x.ApiName == selectedAPI).OrderBy(x => x.Hour).ToList();
-        if (_selectedApiIdx == 1)
+
+        for (var i = 0; i < _days.Count; i++)
         {
-            _chart1 = new TimeSeriesChartSeries
+            var day = _averages.Where(x => x.ApiName == selectedAPI && x.Date == _startDate!.Value.AddDays(i)).OrderBy(x => x.Date).ThenBy(x => x.ApiName).ThenBy(x => x.Hour).ToList();
+            var chart = new TimeSeriesChartSeries
             {
                 Index     = 0,
-                Name      = "Check Orders",
-                Data      = tmp.Select(x => new TimeSeriesChartSeries.TimeValue(baseDate.AddHours(x.Hour), x.AverageValue)).ToList(),
+                Name      = baseDate.AddDays(i).ToString("dddd, dd"),
+                Data      = day.Select(x => new TimeSeriesChartSeries.TimeValue(baseDate.AddHours(x.Hour), x.AverageValue)).ToList(),
                 IsVisible = true,
                 Type      = TimeSeriesDiplayType.Line,
             };
-            _series.Add(_chart1);
+            _series.Add(chart);
         }
-        if (_selectedApiIdx == 2)
-        {
-            _chart2 = new TimeSeriesChartSeries
-            {
-                Index = 1,
-                Name  = "Check Logins",
-                Data  = tmp.Select(x => new TimeSeriesChartSeries.TimeValue(baseDate.AddHours(x.Hour), x.AverageValue)).ToList(), IsVisible = true,
-                Type  = TimeSeriesDiplayType.Line,
-            };
-            _series.Add(_chart2);
-        }
-        if (_selectedApiIdx == 3)
-        {
-            _chart3 = new TimeSeriesChartSeries
-            {
-                Index = 2,
-                Name  = "Check Registrations",
-                Data  = tmp.Select(x => new TimeSeriesChartSeries.TimeValue(baseDate.AddHours(x.Hour), x.AverageValue)).ToList(), IsVisible = true,
-                Type  = TimeSeriesDiplayType.Area,
-            };
-            _series.Add(_chart3);
-        }
-
         StateHasChanged();
     }
 }
