Add Admin roles, users, and apps functionalities
Implemented AdminRole, AdminUser, and AdminApp models with required attributes and database mappings. Updated TycherosMonitoringService to handle fetching lists of admin roles, users, and apps with error handling. Modified TycherosmonitoringContext to include new DbSet properties and entity configurations for admin roles, users, and apps.

--- a/Components/Pages/ColletedTimeSeriesGraph.razor
+++ b/Components/Pages/ColletedTimeSeriesGraph.razor
@@ -75,7 +75,13 @@
         XAxisLines            = false,
         LineStrokeWidth       = 1,
     };
-    protected override async Task OnInitializedAsync() { await OnSelectionChanged(); }
+
+    protected override async Task OnInitializedAsync()
+    {
+        await OnSelectionChanged();
+        // For Testing EF Stuff
+        // var result = await Service.GetAllAdminApps();
+    }
 
     private async Task OnSelectionChanged()
     {
