--- a/Components/Pages/CollectedDataGrid.razor
+++ b/Components/Pages/CollectedDataGrid.razor
@@ -1,6 +1,6 @@
 ﻿@page "/CollectedDataGrid"
 
-@inject TycherosMonitoringService Service
+@inject DbService Service
 @using _4LL_Monitoring.Models
 @using _4LL_Monitoring.Services
 
